@@ -2150,3 +2150,4 @@
 * pheno:   Lua API: added RO access to gentity field sess.mac
 * pheno:   Lua API: added core's fix for fields of type FIELD_ENTITY. No more pointer-values are
            returned anymore.
+*cs:       fixed dyno chaining to use blast radius.
